--- a/_includes/modules.html
+++ b/_includes/modules.html
@@ -8,8 +8,10 @@
         </div>
     </div>
     <div class="container">
-        <div>
-            <a href="/modules">See all modules taken in NUS.</a>
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+                <a href="/modules">See all modules taken in NUS.</a>
+            </div>
         </div>
     </div>
 </section>
