--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -8,11 +8,13 @@
         </div>
     </div>
     <div class="container">
-        <div>
-            {% assign list = "C, C++, Java, Python, Git, Javascript, React, Django, Latex" | split: ", " %}
-            {% for skill in list %}
-            <span class="badge btn-primary">{{ skill }}</span>
-            {% endfor %}
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+                {% assign list = "C, C++, Java, Python, Git, Javascript, React, Django, Latex" | split: ", " %}
+                {% for skill in list %}
+                <span class="badge btn-primary">{{ skill }}</span>
+                {% endfor %}
+            </div>
         </div>
     </div>
 </section>
