--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,4 +1,4 @@
-<section id="contact">
+<section id="contact" class="{{include.classname}}">
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
@@ -16,7 +16,7 @@
             </a>
         </div>
         <div class="col-xs-2 col-xs-offset-1 text-center">
-            <a href="https://github.com/{{ site.github_username }}">
+            <a href="https://github.com/limli">
             <i class="fa fa-github fa-3x wow bounceIn" data-wow-delay=".1s"></i>
             </a>
         </div>
