add achievement page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,9 @@
 <header>
     <div class="header-content">
         <div class="header-content-inner">
-            <h1>Lim Li's Portfolio</h1>
+            <h1>{{ page.title }}</h1>
             <hr>
-            <p>Year 3 NUS student, studying Computer Science & Applied Math double degree.</p>
+            <p>{{ page.description }}</p>
         </div>
     </div>
 </header>
