--- a/_includes/education.html
+++ b/_includes/education.html
@@ -26,6 +26,7 @@
                             <small class="text-muted">current CAP 4.84/5</small>
                         </li>
                     </ul>
+                    <a href="/N_SR_TSRPT.pdf">Unofficial transcript</a>
                 </div>
             </div>
             <br>
