remove target blank

--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -12,7 +12,7 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h3 class="section-heading">Google STEP Intern</h3>
                 <small class="text-muted">May 2020 - August 2020</small>
-                <p>Worked on <a target="_blank" href="https://github.com/googleinterns/step203-2020">DealFinder</a> as a capstone project, a webapp that allows users to upload and share deals, hosted on Google's app engine. Project uses Java Servlets for the backend, and bootstrap for the frontend.</p>
+                <p>Worked on <a href="https://github.com/googleinterns/step203-2020">DealFinder</a> as a capstone project, a webapp that allows users to upload and share deals, hosted on Google's app engine. Project uses Java Servlets for the backend, and bootstrap for the frontend.</p>
             </div>
             <div class="col-lg-8 col-lg-offset-2">
                 <h3 class="section-heading">GIC</h3>
