--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -20,9 +20,16 @@
                 <p>Worked on frontend and backend on a chart sharing web app using React and Django.</p>
             </div>
             <div class="col-lg-8 col-lg-offset-2">
+                <h3 class="section-heading">GovTech</h3>
+                <small class="text-muted">June 2018</small>
+                <p>Worked on the traintraintrain project, which allows commuters to track MRT train locations in real-time. Automated anomaly detection in train timings and set up a notification system using AWS.</p>
+            </div>
+            <div class="col-lg-8 col-lg-offset-2">
                 <h3 class="section-heading">Undergraduate Teaching Assistant</h3>
+                <small class="text-muted">January 2019 - April 2019</small>
+                <p>Tutor for CS2040C, Data Structures and Algorithms.  Conducted tutorials and consultations. </p>
                 <small class="text-muted">August 2020 - November 2020</small>
-                <p>Appointed as tutor for CS3230, Design and Analysis of Algorithms.  Conducted tutorials, as well as set programming assignments questions. </p>
+                <p>Tutor for CS3230, Design and Analysis of Algorithms.  Conducted tutorials, as well as set programming assignments. </p>
             </div>
         </div>
     </div>
