--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -10,6 +10,11 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
+                <h3 class="section-heading">Jane Street Software Engineer Intern</h3>
+                <small class="text-muted">May 2020 - August 2021</small>
+                <p>Worked on apps in OCaml related to trading.</p>
+            </div>
+            <div class="col-lg-8 col-lg-offset-2">
                 <h3 class="section-heading">Google STEP Intern</h3>
                 <small class="text-muted">May 2020 - August 2020</small>
                 <p>Worked on <a href="https://github.com/googleinterns/step203-2020">DealFinder</a> as a capstone project, a webapp that allows users to upload and share deals, hosted on Google's app engine. Project uses Java Servlets for the backend, and bootstrap for the frontend.</p>
