--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,10 @@
 <header>
     <div class="header-content">
+        <div class="header-content-background"></div>
         <div class="header-content-inner">
             <h1>{{ page.title }}</h1>
             <hr>
-            <p>{{ page.description }}</p>
+            {{ page.description }}
         </div>
     </div>
 </header>
