--- a/_includes/community.html
+++ b/_includes/community.html
@@ -1,4 +1,4 @@
-<section id="community" class="{{include.classname}}">
+<section id="community">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
