--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -1,4 +1,4 @@
-<section id="experience" class="{{include.classname}}">
+<section id="experience">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
