--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -1,4 +1,4 @@
-<section id="skills" class="{{include.classname}}">
+<section id="skills">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
