--- a/_includes/achievements.html
+++ b/_includes/achievements.html
@@ -1,4 +1,4 @@
-<section id="achievements" class="{{include.classname}}">
+<section id="achievements">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
