--- a/_includes/modules.html
+++ b/_includes/modules.html
@@ -1,4 +1,4 @@
-<section id="modules" class="{{include.classname}}">
+<section id="modules">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
