--- a/_includes/education.html
+++ b/_includes/education.html
@@ -15,14 +15,10 @@
                 <p class="bottom-margin-0">Awarded NUS Merit Scholarship to study at the School of Computing. Double degree in:</p>
                 <ul>
                     <li>
-                        Computer Science
-                        <br>
-                        <small class="text-muted">current CAP 4.9/5</small>
+                        Computer Science, CAP 4.9/5
                     </li>
                     <li>
-                        Applied Mathematics
-                        <br>
-                        <small class="text-muted">current CAP 4.9/5</small>
+                        Applied Mathematics, CAP 4.9/5
                     </li>
                 </ul>
                 <p><a href="/N_SR_TSRPT.pdf">Unofficial transcript</a></p>
@@ -35,15 +31,6 @@
                 <p class="bottom-margin-0">Graduated with Diploma (High Distinction) with Honours in Mathematics, Physics and Computer Studies,
                 and Major in Chemistry, 2017. Cumulative Average Point (CAP) for Graduation (All Years): 4.7 (max
                 5.0).</p>
-                <ul>
-                    <li>Mathematics Major CAP: 5.0</li>
-                    <li>Mathematics Honours CAP: 5.0</li>
-                    <li>Physics Major CAP: 5.0</li>
-                    <li>Physics Honours CAP: 5.0</li>
-                    <li>Computing Studies Major CAP: 4.8</li>
-                    <li>Computing Studies Honours CAP: 5.0</li>
-                    <li>Chemistry Major CAP: 4.8</li>
-                </ul>
             </div>
         </div>
     </div>
