--- a/_includes/internships.html
+++ b/_includes/internships.html
@@ -10,22 +10,27 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h3 class="section-heading">Jane Street Software Engineer Intern</h3>
+                <h3 class="section-heading">Open Government Products, Software Engineer Intern</h3>
+                <small class="text-muted">Dec 2021 - Feb 2022</small>
+                <p>Worked on RedeemSG, a national digital voucher system using nodejs and React.</p>
+            </div>
+            <div class="col-lg-8 col-lg-offset-2">
+                <h3 class="section-heading">Jane Street, Software Engineer Intern</h3>
                 <small class="text-muted">May 2020 - August 2021</small>
                 <p>Worked on apps in OCaml related to trading.</p>
             </div>
             <div class="col-lg-8 col-lg-offset-2">
-                <h3 class="section-heading">Google STEP Intern</h3>
+                <h3 class="section-heading">Google, STEP Intern</h3>
                 <small class="text-muted">May 2020 - August 2020</small>
                 <p>Worked on a capstone project, a webapp hosted on Google's app engine. Project uses Java Servlets for the backend, and bootstrap for the frontend.</p>
             </div>
             <div class="col-lg-8 col-lg-offset-2">
-                <h3 class="section-heading">GIC</h3>
+                <h3 class="section-heading">GIC, Intern</h3>
                 <small class="text-muted">May 2019 - July 2019</small>
                 <p>Worked on frontend and backend on a chart sharing web app using React and Django.</p>
             </div>
             <div class="col-lg-8 col-lg-offset-2">
-                <h3 class="section-heading">GovTech</h3>
+                <h3 class="section-heading">GovTech, Intern</h3>
                 <small class="text-muted">June 2018</small>
                 <p>Worked on the traintraintrain project, which allows commuters to track MRT train locations in real-time. Automated anomaly detection in train timings and set up a notification system using AWS.</p>
             </div>
