--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                {% assign list = "C++, Java, Python, OCaml, Git, Javascript, React, Django, Latex" | split: ", " %}
+                {% assign list = "C++, Java, Python, Ruby, OCaml, Git, Javascript, React, Django, Latex" | split: ", " %}
                 {% for skill in list %}
                 <span class="badge btn-primary">{{ skill }}</span>
                 {% endfor %}
