--- a/_includes/achievements.html
+++ b/_includes/achievements.html
@@ -10,8 +10,16 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
+                <h3 class="section-heading">International Collegiate Programming Contest (ICPC)</h3>
+                <p>The <b>International Collegiate Programming Contest</b> is an algorithmic programming contest for college students. Teams of three, representing their university, work to solve the most real-world problems, fostering collaboration, creativity, innovation, and the ability to perform under pressure.</p>
+                <p>Represented NUS in various contests:</p>
                 <ul>
-                    <li>ICPC Asia Manila Regional Programming Contest 2019. Team 1st</li>
+                    <li><a href="https://competition.binus.ac.id/icpc2021/final.html" target="_blank">2021 ICPC Asia Jakarta Regional Contest</a> - Team 1st</li>
+                    <li><a href="https://penoy.admu.edu.ph/icpcmanila/2019/" target="_blank">2019 ICPC Asia-Manila Regional Programming Contest</a> - Team 1st</li>
+                </ul>
+            </div>
+            <div class="col-lg-8 col-lg-offset-2">
+                <ul>
                     <li>Google Code Jam to I/O for Women 2018 - 1st</li>
                     <li>International Olympiad in Informatics (IOI) 2017. Silver</li>
                     <li>China Girls' Mathematical Olympiad (CGMO) 2016, Gold medal</li>
