--- a/_includes/achievements.html
+++ b/_includes/achievements.html
@@ -19,13 +19,27 @@
                 </ul>
             </div>
             <div class="col-lg-8 col-lg-offset-2">
-                <ul>
-                    <li>Google Code Jam to I/O for Women 2018 - 1st</li>
-                    <li>International Olympiad in Informatics (IOI) 2017. Silver</li>
-                    <li>China Girls' Mathematical Olympiad (CGMO) 2016, Gold medal</li>
-                </ul>
-                <a href="/achievements">See more</a>
+                <h3 class="section-heading">
+                    International Olympiad in Informatics (IOI)</h3>
+                <p>The <b>International Olympiad in Informatics</b> is an annual competitive programming competition and one of the International Science Olympiads for secondary school students. The contest consists of two days of computer programming/coding and problem-solving of algorithmic nature.</p>
+                <p>Represented Singapore in <a href="https://stats.ioinformatics.org/results/2017" target="_blank">IOI 2017</a>. Silver Medal.</p>
             </div>
+            <div class="col-lg-8 col-lg-offset-2">
+                <h3 class="section-heading">
+                    Google Code Jam to I/O for Women</h3>
+                <p><b>Code Jam to I/O for Women</b> is a coding competition that aims to bring more women from around the globe to Google I/O, administered by Google.</p>
+                <ul>
+                    <li>Google Code Jam to I/O 2022 - 2nd</li>
+                    <li>Google Code Jam to I/O 2018 - 1st</li>
+                </ul>
+            </div>
+            <div class="col-lg-8 col-lg-offset-2">
+                <h3 class="section-heading">
+                    China Girls Mathematical Olympiad (CGMO)</h3>
+                <p>The <b>China Girls Mathematical Olympiad</b> is a math competition with a proof-based format similar to the International Mathematical Olympiad.</p>
+                <p>Represented Singapore in CGMO 2016</a>. Gold Medal.</p>
+            </div>
+            <a href="/achievements">See more</a>
         </div>
     </div>
 </section>
