--- a/_includes/achievements.html
+++ b/_includes/achievements.html
@@ -39,7 +39,9 @@
                 <p>The <b>China Girls Mathematical Olympiad</b> is a math competition with a proof-based format similar to the International Mathematical Olympiad.</p>
                 <p>Represented Singapore in CGMO 2016</a>. Gold Medal.</p>
             </div>
-            <a href="/achievements">See more</a>
+            <div class="col-lg-8 col-lg-offset-2">
+                <a href="/achievements">See more</a>
+            </div>
         </div>
     </div>
 </section>
