--- a/_includes/education.html
+++ b/_includes/education.html
@@ -11,7 +11,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h3 class="section-heading">National University of Singapore</h3>
-                <small class="text-muted">August 2018 - Present</small>
+                <small class="text-muted">Aug 2018 - June 2022</small>
                 <p class="bottom-margin-0">Awarded NUS Merit Scholarship to study at the School of Computing. Double degree in:</p>
                 <ul>
                     <li>
@@ -21,7 +21,7 @@
                         Applied Mathematics, CAP 4.9/5
                     </li>
                 </ul>
-                <p><a href="/N_SR_TSRPT.pdf">Unofficial transcript</a></p>
+                <p>Graduated with First Class Honours in both degrees. <a href="/N_SR_TSRPT.pdf">Unofficial transcript</a>.</p>
             </div>
         </div>
         <div class="row">
